--- a/style.css
+++ b/style.css
@@ -159,3 +159,63 @@ footer h1, h2, h3 {
     justify-content: space-between;
     margin-top: 0;
 }
+
+/* media queries */
+
+@media all and (max-width: 1024px)
+{
+    #page_html
+    {
+        width: auto;
+    }
+}
+
+@media all and (max-width: 1024px)
+{
+    nav
+    {
+        width: auto;
+        text-align: left;
+    }
+
+    nav ul
+    {
+        flex-direction: column;
+    }
+
+    nav li
+    {
+        padding-left: 4px;
+    }
+
+    nav a
+    {
+        font-size: 1.1em;
+    }
+
+    nav a:hover
+    {
+        border-bottom: 0;
+    }
+}
+
+@media all and (max-width: 1024px)
+{
+    #banniere_image
+    {
+        display: none;
+    }
+}
+
+@media all and (max-width: 1024px)
+{
+    section
+    {
+        flex-direction: column;
+    }
+
+    article, aside
+    {
+        width: auto;
+    }
+}
