--- a/CV/stylesheet.css
+++ b/CV/stylesheet.css
@@ -1,22 +1,65 @@
-h1 { text-align: center;
-     color: black;
-     border: solid black;
-     width: 50%;
-     margin: auto;
-
+body
+{
+    background-image: url('greyzz.png');
 }
 
-html { background-image: url(greyzz.png); }
 
-img { float: right;
-      border: solid black;
-      box-shadow: black 5px 5px 10px 2px;  
+h1
+{
+    text-align: center;
 }
 
-p,h2 { clear: both; }
+img
+{
+    float: right;
+    border: 1px solid black;
+    box-shadow: 2px 2px 2px black;
+}
 
-h2, h3, h4 { color: maroon; }
+section
+{
+    display: inline-block;
+    vertical-align: top;
+    width: 30%;
+    margin-right: 1%;
+}
 
-a { font-weight: black;
-    text-decoration: none;  
+#liseret, #contenu
+{
+    display: inline-block;
+    vertical-align: top;
+}
+
+#liseret
+{   
+    width: 10%;
+    margin-right: 3%;
+    height: 500px;
+    background-image: url('lodyas.png');
+    border-radius: 10px;
+}
+
+#contenu
+{
+    width: 85%;
+}
+
+@media all and (max-width: 1024px)
+{
+    section
+    {
+        display: block;
+        width: auto;
+    }
+
+    #liseret
+    {
+        display: none;
+    }
+
+    #contenu
+    {
+        width: auto;
+    }
+
 }
